--- a/TransitHubXAML/Account.xaml
+++ b/TransitHubXAML/Account.xaml
@@ -12,7 +12,7 @@
             <ColumnDefinition Width="222.5*"/>
         </Grid.ColumnDefinitions>
         <Image HorizontalAlignment="Left" Height="150" Margin="151,-137,0,0" VerticalAlignment="Top" Width="158" Source="Resources/logo.png" RenderTransformOrigin="0.526,1.513" Grid.ColumnSpan="2"/>
-        <Label Content="User Name" HorizontalContentAlignment="Center" FontSize="40" VerticalAlignment="Top" Grid.ColumnSpan="2" Margin="5,25,5,0" Height="70" Width="435"/>
+        <Label x:Name="name" Content="User Name" HorizontalContentAlignment="Center" FontSize="40" VerticalAlignment="Top" Grid.ColumnSpan="2" Margin="5,25,5,0" Height="70" Width="435"/>
         <Button Content="   Account" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="25" Width="350" Grid.ColumnSpan="2" Margin="48,130,0,0" Height="45"/>
         <Button Content="      Payment Methods" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="25" Width="350" Grid.ColumnSpan="2" Margin="48,220,0,0" Height="45"/>
         <Button Content="    Purchase History" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="25" Width="350" Grid.ColumnSpan="2" Margin="48,310,0,0" Height="45"/>
