--- a/TransitHubXAML/checkout.xaml
+++ b/TransitHubXAML/checkout.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TransitHubXAML.checkout"
+﻿<Page x:Class="TransitHubXAML.checkout"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,24 +6,21 @@
         xmlns:local="clr-namespace:TransitHubXAML"
         mc:Ignorable="d"
         Title="checkout" Height="800" Width="450">
+    
     <Grid>
-        <Button Background="White" Content="&lt;" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="49,22,0,0" VerticalAlignment="Top" Width="75" Height="66" FontSize="48"/>
+        <Label MouseDown="back_button" Content="&lt;" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="33,2,0,0" VerticalAlignment="Top" Height="83" Width="96" FontSize="60"/>
         <Label Content="CHECKOUT" HorizontalAlignment="Left" Margin="149,22,0,0" VerticalAlignment="Top" Width="255" FontSize="40"/>
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="100" Margin="49,122,0,0" Stroke="Black" VerticalAlignment="Top" Width="383"/>
-        <Label Content="XXXXXX1234" HorizontalAlignment="Left" Margin="68,145,0,0" VerticalAlignment="Top" Width="101" FontSize="16"/>
-        <Label Content="Expires 09/09" HorizontalAlignment="Left" Margin="64,181,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="100" Margin="49,245,0,0" Stroke="Black" VerticalAlignment="Top" Width="383"/>
-        <Label Content="XXXXXX4567" HorizontalAlignment="Left" Margin="68,268,0,0" VerticalAlignment="Top" Width="101" FontSize="16"/>
-        <Label Content="Expires 09/09" HorizontalAlignment="Left" Margin="68,304,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <Image Source="Resources/masterCard.PNG" HorizontalAlignment="Left" Height="85" Margin="305,250,0,0" VerticalAlignment="Top" Width="137"/>
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="100" Margin="49,368,0,0" Stroke="Black" VerticalAlignment="Top" Width="383"/>
-        <Label Content="my_email@realemail.com" HorizontalAlignment="Left" Margin="49,403,0,0" VerticalAlignment="Top" Width="189" FontSize="16"/>
-        <Image Source="Resources/visa.PNG" HorizontalAlignment="Left" Height="62" Margin="285,150,0,0" VerticalAlignment="Top" Width="135"/>
-        <Image Source="Resources/paypal.PNG" HorizontalAlignment="Left" Height="107" Margin="317,368,0,0" VerticalAlignment="Top" Width="115"/>
-        <RadioButton  HorizontalAlignment="Left" Margin="10,161,0,0" VerticalAlignment="Top" Height="15" FontSize="40"/>
-        <RadioButton  HorizontalAlignment="Left" Margin="10,284,0,0" VerticalAlignment="Top" Height="15" FontSize="40"/>
-        <RadioButton  HorizontalAlignment="Left" Margin="10,419,0,0" VerticalAlignment="Top" Height="15" FontSize="40"/>
+        <Rectangle Name="visaRectangle" MouseDown="visaChange" MouseUp="Visa_Click" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="113" Margin="36,126,0,0" Stroke="#FFB83A3F" VerticalAlignment="Top" Width="383"/>
+        <Label MouseDown="Visa_Click" Content="XXXXXX1234" HorizontalAlignment="Left" Margin="52,146,0,0" VerticalAlignment="Top" Width="101" FontSize="16"/>
+        <Label MouseDown="Visa_Click" Content="Expires 09/09" HorizontalAlignment="Left" Margin="48,182,0,0" VerticalAlignment="Top" FontSize="16"/>
+        <Rectangle Name="msRectangle" MouseDown="msChange" MouseUp="MasterCard_Click" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="113" Margin="33,290,0,0" Stroke="#FFB83A3F" VerticalAlignment="Top" Width="383"/>
+        <Label MouseDown="MasterCard_Click" Content="XXXXXX4567" HorizontalAlignment="Left" Margin="58,308,0,0" VerticalAlignment="Top" Width="101" FontSize="16"/>
+        <Label MouseDown="MasterCard_Click" Content="Expires 09/09" HorizontalAlignment="Left" Margin="52,344,0,0" VerticalAlignment="Top" FontSize="16"/>
+        <Image MouseDown="MasterCard_Click" Source="Resources/masterCard.PNG" HorizontalAlignment="Left" Height="85" Margin="279,305,0,0" VerticalAlignment="Top" Width="137"/>
+        <Rectangle Name="ppRectangle" MouseDown="ppChange" MouseUp="Paypal_Click" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="113" Margin="33,447,0,0" Stroke="#FFB83A3F" VerticalAlignment="Top" Width="383"/>
+        <Label MouseDown="Paypal_Click" Content="my_email@realemail.com" HorizontalAlignment="Left" Margin="48,490,0,0" VerticalAlignment="Top" Width="189" FontSize="16"/>
+        <Image MouseDown="Visa_Click" Source="Resources/visa.PNG" HorizontalAlignment="Left" Height="62" Margin="269,152,0,0" VerticalAlignment="Top" Width="135"/>
+        <Image MouseDown="Paypal_Click" Source="Resources/paypal.PNG" HorizontalAlignment="Left" Height="107" Margin="289,447,0,0" VerticalAlignment="Top" Width="115"/>
         <Button Content="ADD PAYMENT METHOD" Foreground="White"  Background="#B83A3F"  HorizontalAlignment="Left" Margin="36,660,0,0" VerticalAlignment="Top" Width="368" Height="46" FontSize="30"/>
-
     </Grid>
-</Window>
+</Page>
