--- a/TransitHubXAML/thankYou.xaml
+++ b/TransitHubXAML/thankYou.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TransitHubXAML.thankYou"
+﻿<Page x:Class="TransitHubXAML.thankYou"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,17 +11,17 @@
         <Rectangle Fill="DimGray" HorizontalAlignment="Left" Height="10" Margin="0,43,0,0" Stroke="Black" VerticalAlignment="Top" Width="442"/>
         <Label Content="THANK YOU" HorizontalAlignment="Left" Margin="140,58,0,0" VerticalAlignment="Top" FontSize="30"/>
         <GroupBox Header="" HorizontalAlignment="Left" Height="100" Margin="10,108,0,0" VerticalAlignment="Top" Width="422">
-            <TextBlock HorizontalAlignment="Left" Margin="11,7,0,0" TextWrapping="Wrap" Text="Adult Ticket x2 &#xA;Youth Ticket x1" VerticalAlignment="Top" Height="60" Width="268" FontSize="20"/>
+            <TextBlock Name="OrderDetailsText" HorizontalAlignment="Left" Margin="11,7,0,0" TextWrapping="Wrap" Text="Adult Ticket x2 &#xA;Youth Ticket x1" VerticalAlignment="Top" Height="60" Width="268" FontSize="20"/>
         </GroupBox>
         <Label Content="Order Date" HorizontalAlignment="Left" Margin="24,252,0,0" VerticalAlignment="Top" FontSize="20"/>
-        <Label Content="01/21/2021" HorizontalAlignment="Left" Margin="270,252,0,0" VerticalAlignment="Top" FontSize="20"/>
+        <Label Name="dateLabel" Content="01/21/2021" HorizontalAlignment="Left" Margin="270,252,0,0" VerticalAlignment="Top" FontSize="20"/>
         <Rectangle Fill="LightGray" HorizontalAlignment="Left" Height="10" Margin="0,289,0,0" Stroke="Black" VerticalAlignment="Top" Width="442"/>
         <Label Content="Total" HorizontalAlignment="Left" Margin="24,318,0,0" VerticalAlignment="Top" FontSize="20"/>
-        <Label Content="$XXX.XX" HorizontalAlignment="Left" Margin="270,318,0,0" VerticalAlignment="Top" FontSize="20"/>
+        <Label Name="totalLabel" Content="$XXX.XX" HorizontalAlignment="Left" Margin="270,318,0,0" VerticalAlignment="Top" FontSize="20"/>
         <Rectangle Fill="LightGray" HorizontalAlignment="Left" Height="10" Margin="-10,360,0,0" Stroke="Black" VerticalAlignment="Top" Width="452"/>
         <Label Content="Receipt Number" HorizontalAlignment="Left" Margin="24,393,0,0" VerticalAlignment="Top" FontSize="20"/>
-        <Label Content="54687" HorizontalAlignment="Left" Margin="279,393,0,0" VerticalAlignment="Top" FontSize="20"/>
+        <Label Name="receiptNumber" Content="54687" HorizontalAlignment="Left" Margin="279,393,0,0" VerticalAlignment="Top" FontSize="20"/>
         <Rectangle Fill="LightGray" HorizontalAlignment="Left" Height="9" Margin="-10,435,0,0" Stroke="Black" VerticalAlignment="Top" Width="452"/>
 
     </Grid>
-</Window>
+</Page>
