--- a/TransitHubXAML/signUpPage.xaml
+++ b/TransitHubXAML/signUpPage.xaml
@@ -27,7 +27,7 @@
         <Label Content="First Name" Grid.Column="2" HorizontalAlignment="Left" Margin="10,37,0,0" Grid.Row="4" VerticalAlignment="Top" Height="44" Width="173" FontSize="22"/>
         <TextBox x:Name="firstNameText" Grid.Column="2" HorizontalAlignment="Left" Height="42" Margin="17,74,0,0" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Top" Width="166" FontSize="22"/>
         <TextBox x:Name="passText2" Grid.Column="2" HorizontalAlignment="Left" Height="42" Margin="17,502,0,0" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Top" Width="354" FontSize="24"/>
-        <Button Content="Sign Up" Click="SignUp_Click " HorizontalAlignment="Left" Margin="18,567,0,0" VerticalAlignment="Top" Width="354" Height="49" FontSize="22" Background="#FFC43A3F" Foreground="White" Grid.Column="2" Grid.Row="4"/>
+        <Button Style="{StaticResource RedButton}" Content="Sign Up" Click="SignUp_Click " HorizontalAlignment="Left" Margin="18,567,0,0" VerticalAlignment="Top" Width="354" Height="49" FontSize="22" Background="#FFC43A3F" Foreground="White" Grid.Column="2" Grid.Row="4"/>
         <Label Content="Confirm Password" Grid.Column="2" HorizontalAlignment="Left" Margin="11,466,0,0" Grid.Row="4" VerticalAlignment="Top" Height="44" Width="249" FontSize="22"/>
         <Image Grid.Column="2" MouseDown="Back_Click" HorizontalAlignment="Left" Height="40" Grid.Row="1" VerticalAlignment="Top" Width="69" Source="Resources/back-arrow.png"/>
         <TextBox x:Name="lastNameText" Grid.Column="2" HorizontalAlignment="Left" Height="42" Margin="192,74,0,0" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Top" Width="179" FontSize="22"/>
