--- a/TransitHubXAML/MainWindow.xaml
+++ b/TransitHubXAML/MainWindow.xaml
@@ -19,22 +19,23 @@
             <Grid.RowDefinitions    >
                 <RowDefinition Height="90"/>
             </Grid.RowDefinitions>
-            <Button Name="button1" BorderThickness="0" Grid.Column="0" Grid.Row="0" Click="button1_Click" Background="White" Margin="0,5,0,-5" >
+            <Button Style="{StaticResource WhiteButton}" Name="button1" BorderThickness="0" Grid.Column="0" Grid.Row="0" Click="button1_Click" Background="White" Margin="0,5,0,-5" >
                 <Image Name="image1" Source="Resources/store.png" Height="69" Width="61"></Image>
             </Button>
-            <Button Name="button2" BorderThickness="0" Grid.Column="1" Grid.Row="0" Click="button2_Click" Background="White" Margin="0,5,0,-5" >
+            <Button Style="{StaticResource WhiteButton}" Name="button2" BorderThickness="0" Grid.Column="1" Grid.Row="0" Click="button2_Click" Background="White" Margin="0,5,0,-5" >
                 <Image Name="image2" Source="Resources/cart.png" Width="68" Height="69" ></Image>
             </Button>
-            <Button  Name="button3" BorderThickness="0" Grid.Column="2" Grid.Row="0" Click="button3_Click" Background="White" Margin="0,4,0,-4">
+            <Button Style="{StaticResource WhiteButton}" Name="button3" BorderThickness="0" Grid.Column="2" Grid.Row="0" Click="button3_Click" Background="White" Margin="0,4,0,-4">
                 <Image Name="image3" Source="Resources/my_tickets.png" Height="74" Width="62"></Image>
             </Button>
-            <Button Name="button4" BorderThickness="0" Grid.Column="3" Grid.Row="0" Click="button4_Click" Background="White" Margin="0,5,0,-5" >
+            <Button Style="{StaticResource WhiteButton}" Name="button4" BorderThickness="0" Grid.Column="3" Grid.Row="0" Click="button4_Click" Background="White" Margin="0,5,0,-5" >
                 <Image Name="image4" Source="Resources/help.png" Height="70" Width="86"></Image>
             </Button>
-            <Button Name="button5" BorderThickness="0" Grid.Column="4" Grid.Row="0" Click="button5_Click" Margin="0,5,6,-5" Background="White">
+            <Button Style="{StaticResource WhiteButton}" Name="button5" BorderThickness="0" Grid.Column="4" Grid.Row="0" Click="button5_Click" Margin="0,5,6,-5" Background="White">
                 <Image Name="image5" Source="Resources/accountNav.png" Height="80" Width="60"></Image>
             </Button>
         </Grid>
-        <Rectangle Fill="#FFBDBDBD" HorizontalAlignment="Left" Height="3" Stroke="{x:Null}" StrokeThickness="0.5" VerticalAlignment="Top" Width="454" Margin="0,671,0,0"/>
+        <Rectangle Name="navBarBorder" Fill="#FFBDBDBD" HorizontalAlignment="Left" Height="3" Stroke="{x:Null}" StrokeThickness="0.5" VerticalAlignment="Top" Width="454" Margin="0,671,0,0"/>
+
     </Grid>
 </Window>
