--- a/TransitHubXAML/accountPage.xaml
+++ b/TransitHubXAML/accountPage.xaml
@@ -15,10 +15,10 @@
         </Grid.ColumnDefinitions>
         <Image HorizontalAlignment="Left" Height="150" Margin="151,-137,0,0" VerticalAlignment="Top" Width="158" Source="Resources/logo.png" RenderTransformOrigin="0.526,1.513" Grid.ColumnSpan="2"/>
         <Label x:Name="name" Content="Username" HorizontalContentAlignment="Center" FontSize="40" VerticalAlignment="Top" Grid.ColumnSpan="2" Margin="5,25,5,0" Height="70" Width="435" Loaded="Name_Loaded"/>
-        <Button Content="   Account" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="25" Width="350" Grid.ColumnSpan="2" Margin="48,130,0,0" Height="45"/>
-        <Button Content="      Payment Methods" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="25" Width="350" Grid.ColumnSpan="2" Margin="48,220,0,0" Height="45"/>
-        <Button Content="    Purchase History" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="25" Width="350" Grid.ColumnSpan="2" Margin="48,310,0,0" Height="45"/>
-        <Button Content="    Verification" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="25" Width="350" Grid.ColumnSpan="2" Margin="48,400,0,0" Height="45"/>
+        <Button Content="   Account" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="25" Width="350" Grid.ColumnSpan="2" Margin="48,130,0,0" Height="45" Background="White"/>
+        <Button Content="      Payment Methods" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="25" Width="350" Grid.ColumnSpan="2" Margin="48,220,0,0" Height="45" Background="White"/>
+        <Button Content="    Purchase History" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="25" Width="350" Grid.ColumnSpan="2" Margin="48,310,0,0" Height="45" Background="White"/>
+        <Button Content="    Verification" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="25" Width="350" Grid.ColumnSpan="2" Margin="48,400,0,0" Height="45" Background="White"/>
         <Button Content="Logout" Foreground="white" Background="#B83A3F" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="30" Width="450" Grid.ColumnSpan="2" Margin="-3,548,-2,-103" Height="69"/>
         <Image HorizontalAlignment="Left" Height="45" Margin="62,220,0,0" VerticalAlignment="Top" Width="66" Source="Resources/credit-card.png" RenderTransformOrigin="0.526,1.513"/>
         <Image HorizontalAlignment="Left" Height="39" Margin="63,313,0,0" VerticalAlignment="Top" Width="57" Source="Resources/history.png" RenderTransformOrigin="0.526,1.513"/>
