--- a/TransitHubXAML/storePage.xaml
+++ b/TransitHubXAML/storePage.xaml
@@ -58,12 +58,11 @@
             </Setter>
         </Style>
     </Page.Resources>
-    
+
     <Grid>
         <TabControl HorizontalAlignment="Left" Height="700" VerticalAlignment="Top" Width="450" >
             <TabItem  Header="Tickets" Width="225" FontSize="40" Margin="0,0,0,0" BorderBrush="#FFE5E5E5">
                 <Canvas>
-                    <Rectangle Fill="#B83A3F" Height="7" Stroke="#FFB83A3F" Width="472" Canvas.Left="-18"/>
                     <Label Content="Adult Ticket" Height="39" Canvas.Top="17" Width="138" Canvas.Left="10" FontSize="24"/>
                     <Label Foreground="Blue" Tag="For passengers age 18+" FontSize="16" Canvas.Left="10" Canvas.Top="56">
                         <TextBlock Text="{Binding Path=Tag, 
@@ -87,12 +86,12 @@
                     <Button Name="youthTicketPlus" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="+" Height="51" Width="50" Canvas.Left="367" Canvas.Top="186" FontSize="35" Click="youthTicketPlus_Click" Background="White" Foreground="#FF707070"/>
                     <Rectangle Fill="#FFACACAC" Height="1" Stroke="#FFACACAC" Width="472" Canvas.Left="-18" Canvas.Top="268"/>
                     <Button Style="{StaticResource RedButton}" Name="ticketsAddToCart" Background="#B83A3F" Foreground="White" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="Add To Cart $0.00" Height="62" Width="389" Canvas.Left="28" Canvas.Top="519" FontSize="28" Click="AddToCart_Click" BorderBrush="#FFB83A3F"/>
+                    <Rectangle Fill="#B83A3F" Height="7" Stroke="#FFB83A3F" Width="472" Canvas.Left="-18" Canvas.Top="-5"/>
                 </Canvas>
             </TabItem>
 
             <TabItem Header="Passes" FontSize="40" Margin="0,0,-100,0">
                 <Canvas>
-                    <Rectangle Fill="#B83A3F" Height="7" Stroke="#B83A3F" Width="472" Canvas.Left="-18"/>
                     <Label Content="Adult Monthly Pass" Height="39" Canvas.Top="17" Width="240" Canvas.Left="10" FontSize="24"/>
                     <Label  Foreground="Blue" Tag="Additional Information Here" FontSize="16" Canvas.Left="10" Canvas.Top="56">
                         <TextBlock Text="{Binding Path=Tag, 
@@ -127,6 +126,7 @@
                     <Label Name="lowIncomeCount" Content="0" FontSize="24" Canvas.Left="325" Canvas.Top="329" />
                     <Button Name="lowIncomeMonthlyPlus" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="+" Height="51" Width="50" Canvas.Left="367" Canvas.Top="324" FontSize="35" Click="lowIncomeMonthlyPlus_Click" Background="White" Foreground="#FF707070"/>
                     <Rectangle Fill="#FFACACAC" Height="1" Stroke="#FFACACAC" Width="472" Canvas.Top="404"/>
+                    <Rectangle Fill="#B83A3F" Height="7" Stroke="#B83A3F" Width="472" Canvas.Left="-5" Canvas.Top="-5"/>
                 </Canvas>
             </TabItem>
 
