--- a/TransitHubXAML/CustomControl/MenuWithSubMenuControl.xaml
+++ b/TransitHubXAML/CustomControl/MenuWithSubMenuControl.xaml
@@ -5,7 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TransitHubXAML.CustomControl"
              mc:Ignorable="d" 
-             x:Name="this">
+             x:Name="this"
+             >
     <UserControl.Resources>
 
         <Thickness x:Key="DefaultSubMenuPadding" Left="10"/>
@@ -87,7 +88,7 @@
         <Style TargetType="{x:Type ListBoxItem}">
             <Setter Property="Background" Value="GreenYellow"/>
             <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Height" Value="30"/>
+            <!--<Setter Property="Height" Value="30"/>-->
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ListBoxItem}">
