--- a/TransitHubXAML/Help.xaml
+++ b/TransitHubXAML/Help.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TransitHubXAML.Help"
+﻿<Page x:Class="TransitHubXAML.Help"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -68,4 +68,4 @@
             </Grid>
         </StackPanel>
     </ScrollViewer>
-</Window>
+</Page>
